<resources
    tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">

    <!-- menu -->
    <string name="home">Home</string>
    <string name="begin">Begin</string>
    <string name="intermediate">Intermediate</string>
    <string name="advance">Advance</string>
    <string name="favorite">Favorite</string>
    <string name="download">Download</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="more_apps">More apps</string>
    <string name="search">Search</string>

    <!-- action menu -->
    <string name="action_search">Search</string>

    <!-- common -->
    <string name="success">Success</string>
    <string name="successfully">Successfully</string>
    <string name="saved">Saved</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="time_play">0:00</string>
    <string name="playing">Playing</string>

    <!-- msg -->
    <string name="msg_connection_network_error">There are no network. Please check connection networking</string>
    <string name="msg_confirm_exit">Do you want to exit app ?</string>
    <string name="msg_no_email_client">There are no email clients installed.</string>
    <string name="msg_no_email">This user has no an email address</string>
    <string name="msg_no_phone_number">This user has no phone number</string>
    <string name="input_name">Please input name</string>
    <string name="input_comment">Please input comment</string>
    <string name="hint_search">Enter key search...</string>
    <string name="msg_confirm_restart_app">Do you like to restart the application now?</string>

    <!-- for tab of home screen-->
    <string-array name="tabs">
        <item>New Book</item>
        <item>Top Book</item>
        <item>Popular</item>
    </string-array>

    <!-- other screen -->
    <string name="status">WATCHED</string>
    <string name="you_have_not_answered_the_question_yet">You have not answered the question yet</string>
    <string name="enter_answer">Enter answer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="name">Full Name</string>
    <string name="send_email">Send Email</string>
    <string name="menu">Menu</string>
    <string name="lastest">Lastest</string>
    <string name="screen_settings">Screen settings</string>
    <string name="change_theme">Change Theme</string>
    <string name="grid_interface">Grid interface</string>
    <string name="change_list_type">Change list type</string>
    <string name="display_question">Display question</string>
    <string name="change_language">Change Language</string>
    <string name="admob">Advertisement</string>
    <string name="show_admob">Show big advertisement</string>
    <string name="change_background_app">Change background app</string>
    <string name="fonts_settings">Fonts settings</string>
    <string name="keep_always_on_screen">Keep always on screen</string>
    <string name="font_size">Font size</string>
    <string name="sample">Sample text</string>
    <string name="apply">Apply</string>
    <string name="read_more">Read more</string>
    <string name="downloading">Downloading...</string>
    <string name="the_cast">The cast</string>
    <string name="error_LoadBook">Cannot load the book</string>
    <string name="message_search_empty">Key search empty</string>
    <string name="message_success_add_bookmarks">Success add bookmarks !</string>
    <string name="message_success_delete_bookmarks">Success delete bookmarks !</string>
    <string name="tryAgain">Try Again</string>

    <string name="most_viewed">Most viewed</string>
    <string name="comment">Comment</string>
    <string name="add_comment">add comment</string>
    <string name="clear_history">Clear history</string>
    <string name="no_data">No data</string>
    <string name="full_screen">Full screen</string>
    <string name="clear_cache">Clean cache</string>
    <string name="clear_data_offline">Clear offline data</string>
    <string name="list_or_grid">List or grid</string>
    <string name="follow_us">Follow us:</string>
    <string name="no_data_clean">No cache clean</string>
    <string name="not_change">Not change anything</string>
    <string name="move_page">Move Page</string>
    <string name="move_to_page">Move to page ?</string>
    <string name="message_please_wait_load_epub">please wait load epub !</string>
    <string name="loading">loading...</string>
    <string name="input_page">Enter page</string>
    <string name="message_clear_history">Do you want clear history ?</string>
    <string name="yes">Yes</string>
    <string name="message_continue_read">Do you want to continue from the last read ?</string>
    <string name="title_clear_cache">Do you want to clear cache?</string>
    <string name="read_continues">Read continues</string>
    <string name="read">Read</string>
    <string name="msg_url_empty">Url is empty</string>
    <string name="select_theme">SELECT THEME</string>
    <string name="select_list_type">SELECT LIST TYPE</string>
    <string name="select_type_display_question">SELECT TYPE DISPLAY QUESTION</string>
    <string name="select_background_app">SELECT BACKGROUND APP</string>
    <string name="select_language">SELECT LANGUAGE</string>
    <string name="lbl_publisher">Publisher:</string>
    <string name="content">Content</string>
    <string name="view_more">View More >></string>

    <!--Feedback-->
    <string name="input_your_name">Your name (*)</string>
    <string name="input_your_email">Your email (*)</string>
    <string name="input_subject">Your subject (*)</string>
    <string name="input_your_feedback">Input your feedback (*)</string>
    <string name="send_feedback">SEND FEEDBACK</string>
    <string name="message_name_empty">Please input your name.</string>
    <string name="message_email_empty">Please input your email.</string>
    <string name="message_email_wrong_format">Your mail is not correct format. Try again please!</string>
    <string name="message_subject_empty">Please input the subject.</string>
    <string name="message_content_empty">Please input your feedback.</string>
    <string name="msg_lesson_downloaded">Lesson downloaded.</string>

    <!--QUESTION-->
    <string name="take_exam_during_lesson">Take exam during lesson</string>
    <string name="take_exam_after_lesson">Take exam after lesson</string>
    <string name="please_fill_in_the_answer">Please fill in the answer</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="answer">Answer</string>
    <string name="show_answer">Show answer</string>

    <!--select them-->
    <string name="them_deep_green">Deep Green</string>
    <string name="them_coal_purple">Coal Purple</string>
    <string name="them_deep_purple">Deep Purple</string>
    <string name="them_indigo">Indigo</string>
    <string name="them_deep_orange">Deep Orange</string>
    <string name="them_deep_grey">Deep Grey</string>
    <string name="you_have_selected_the_display_mode_take_exam_during_lesson">You have selected the display mode take exam during lesson.</string>
    <string name="this_lesson_has_no_questions">This lesson has no questions.</string>
    <string name="this_lesson_has_no_vocabularys">This lesson has no vocabularys.</string>
    <string name="choose_correct_answer">Choose correct answer!</string>

    <!--show result question-->
    <string name="excellent">Excellent</string>
    <string name="completed">Completed</string>
    <string name="reached">Reached</string>
    <string name="not_achieved">Not achieved</string>
    <string name="you_answered_correctly">You answered correctly</string>
    <string name="you_no_achievements_in_this_lesson">You have not achievements in this lesson</string>
    <string name="reaching"> \nreaching</string>
    <string name="question">Question:</string>
    <string name="question_">Question</string>
    <string name="play">Play</string>
    <string name="to_turn_off">To turn off question display while playing music please go to Menu left -> Settings -> Display question</string>
    <string name="reply_again">Reply again</string>
    <string name="next_lesson">Next lesson</string>
    <string name="back_to_board">Back to board</string>

    <string name="title_lesson">Lesson</string>
    <string name="title_vocabulary">Vocabulary</string>
    <string name="title_question">Question</string>

    <!--translate key-->
    <string name="translate_key">trnsl.1.1.20170511T022339Z.9dd5ad1e9bb0f781.28a387cf264e164bdf781f5a45ccf1a655c6be7b</string>
    <string name="e_learning">E - Learning</string>
    <string name="email_or_username">email or username</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Login in with Facebook</string>
    <string name="msg_request_time_out">Request time out</string>
    <string name="msg_can_not_get_email">Fail login can not get your email bussiness_address</string>
    <string name="msg_remind_user_grants_permissions">Application can not work correctly if it\'s not enough permissions</string>
    <string name="msg_have_some_errors">Have some error, please try again</string>
    <string name="msg_no_network">Network is not available</string>
    <string name="network_is_not_connect">Network is not avaliable</string>
    <string name="no_thank">No thanks</string>
    <string name="allow">allow</string>
    <string name="password_is_incorrect">password is incorrect</string>
    <string name="msg_have_some_error">have some error</string>
    <string name="msg_email_is_required">email is required</string>
    <string name="msg_password_is_required">password is required</string>
    <string name="msg_logout">Do you want logout</string>
    <string name="msg_out">Logout</string>
    <string name="start_now">star_now</string>
    <string name="setting">Setting</string>
    <string name="msg_grammar_quizz">Grammar Quizz</string>
    <string name="permission_necessary">permission_necessary</string>
    <string name="storage_permission_is_encessary_to_wrote_event">storage permission is encessary to_wrote event</string>


</resources>
