<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_marginLeft="@dimen/dimen_3x"
    android:layout_marginRight="@dimen/dimen_3x"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dimen_2x"
        android:text="@string/select_type_display_question"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_small" />

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/rcvData"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RadioGroup
        android:layout_margin="@dimen/dimen_1x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:text="@string/take_exam_during_lesson"
            android:id="@+id/radio_display_with_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:layout_marginTop="@dimen/dimen_1x"
            android:text="@string/take_exam_after_lesson"
            android:id="@+id/radio_display_last_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RadioGroup>
</LinearLayout>