<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.suusoft.elistening.viewmodel.fragment.FeedBackVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_main"
        android:orientation="vertical"
        app:background_main="@{viewModel.backgroundMain}">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dimen_4x">


                <EditText
                    android:id="@+id/txtName"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_2x"
                    android:background="@color/white"
                    android:hint="@string/input_your_name"
                    android:imeOptions="actionNext"

                    android:inputType="textCapWords"
                    android:lines="1"
                    android:padding="@dimen/dimen_2x"
                    android:text="@={viewModel.name}"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/text_size_normal" />


                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_3x"
                    android:background="@color/white"

                    android:hint="@string/input_your_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:padding="@dimen/dimen_2x"
                    android:text="@={viewModel.email}"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/text_size_normal" />


                <EditText
                    android:id="@+id/txtSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_3x"
                    android:background="@color/white"
                    android:hint="@string/input_subject"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:lines="1"

                    android:padding="@dimen/dimen_2x"
                    android:text="@={viewModel.subject}"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/text_size_normal" />


                <EditText
                    android:id="@+id/txtContent"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_content_comment"
                    android:layout_marginTop="@dimen/dimen_3x"
                    android:background="@color/white"
                    android:gravity="top|left"
                    android:hint="@string/input_your_feedback"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences"
                    android:lines="6"
                    android:padding="@dimen/dimen_2x"
                    android:singleLine="false"
                    android:text="@={viewModel.content}"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/text_size_normal" />

                <com.suusoft.elistening.widgets.textview.TextViewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5x"
                    android:background="@drawable/bg_button_primary"
                    app:background_radius="@{viewModel.backgroundRadius}"
                    android:gravity="center"
                    android:onClick="@{viewModel::onClickSendFeedBack}"
                    android:padding="@dimen/dimen_x1x"
                    android:text="@string/send_feedback"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</layout>