<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.activity.StartScreenActivity">

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ContentDescription" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_5x"
        android:id="@+id/rl_move"
        android:layout_alignParentBottom="true"
        android:background="@color/transparentColor">

        <me.relex.circleindicator.CircleIndicator
            android:layout_alignParentBottom="true"
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_3x"
            app:ci_drawable="@drawable/indicator_drawble" />

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dimen_1x"
            android:text="@string/skip"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/next"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/dimen_1x"
            android:textColor="@color/white"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_start"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:visibility="gone"
        android:layout_margin="@dimen/dimen_2x"
        android:layout_height="@dimen/dimen_5x">

        <TextView
            android:layout_marginRight="@dimen/dimen_1x"
            android:layout_marginLeft="@dimen/dimen_2x"
            android:padding="@dimen/dimen_1x"
            android:textAllCaps="true"
            android:gravity="center"
            android:text="@string/start_now"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/border_btn"
            android:textSize="@dimen/text_size_normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="RtlHardcoded" />
    </RelativeLayout>

</RelativeLayout>