<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:src="@drawable/img_playlist"
        android:id="@+id/img_background"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/detail_background1" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:theme="@style/AppTheme.AppBarOverlay" >

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:src="@drawable/img_success_question"
                android:layout_width="@dimen/height_img_question"
                android:layout_height="@dimen/height_img_question" />

            <TextView
                android:id="@+id/tvCongratulation"
                android:layout_marginTop="@dimen/dimen_4x"
                android:gravity="center"
                android:text="Congratulation!"
                android:textSize="@dimen/text_size_xxlarge"
                android:textColor="@color/whitetext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:gravity="center"
                android:id="@+id/tvComplete"
                android:layout_marginTop="@dimen/dimen_1x"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/text_size_xlarge"
                android:textColor="@color/whitetext"
                android:text="You answered correctly 5/6 reaching 80%"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dimen_5x"
                android:layout_marginLeft="@dimen/dimen_2x"
                android:layout_marginRight="@dimen/dimen_2x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:padding="@dimen/dimen_1x"
                    android:layout_marginRight="@dimen/dimen_05x"
                    android:id="@+id/btnReplyAgain"
                    android:layout_weight="1"
                    android:text="@string/reply_again"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_xlarge"
                    android:textColor="@color/whitetext"
                    android:background="@drawable/bg_btn_question_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:padding="@dimen/dimen_1x"
                    android:id="@+id/btnNextLesson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_05x"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_question_transparent"
                    android:gravity="center"
                    android:text="@string/next_lesson"
                    android:textColor="@color/whitetext"
                    android:textSize="@dimen/text_size_xlarge" />

            </LinearLayout>





            <TextView
                android:padding="@dimen/dimen_1x"
                android:id="@+id/btnBackToBoard"
                android:layout_margin="@dimen/dimen_2x"
                android:text="@string/back_to_board"
                android:gravity="center"
                android:textSize="@dimen/text_size_xlarge"
                android:textColor="@color/whitetext"
                android:background="@drawable/bg_btn_question_transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>



    </RelativeLayout>

</RelativeLayout>